Fixed alignment, added crescent / gibbous

--- a/main.css
+++ b/main.css
@@ -32,5 +32,6 @@ body {
 @media screen and (max-width: 420px) {
     body {
         flex-flow: column;
+        text-align: center;
     }
 }
